background-fixed on mobile

--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -3636,7 +3636,7 @@ select[multiple].input-lg,
   background-image: none;
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 10px 20px;
+  padding: 5px 10px;
   font-size: 14px;
   line-height: 1.42857;
   border-radius: 4px;
