--- a/src/main/resources/static/css/style-nav.css
+++ b/src/main/resources/static/css/style-nav.css
@@ -27,6 +27,34 @@
   padding: 8px 0px;
 }
 
+.fh5co-menu-1 a {
+  position: relative;
+  text-decoration: none;
+  padding-bottom: 5px;
+}
+
+.fh5co-menu-1 a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;              /* underline thickness */
+  background-color: #FF9800; /* underline color */
+  transform: scaleX(0);      /* hidden */
+  transform-origin: left;    /* start from left */
+  transition: transform 0.3s ease;
+}
+
+.fh5co-menu-1 a:hover::after {
+  transform: scaleX(1);      /* animate to full width */
+}
+
+.fh5co-main-nav .fh5co-menu-2 {
+  font-size: 14px;
+  padding-top: 2px;
+}
+
 .fh5co-main-nav .fh5co-menu-1 a {
   padding: 0px 20px;
   color: rgba(255, 255, 255, 0.5);
