--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,13 +33,12 @@ p {
 
 .btn {
   font-size: 12px;
-  letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 700;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
-  border-radius: 4px;
+  border-radius: 10px;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -75,7 +74,6 @@ p {
 .btn-outline {
   background: none;
   border: 2px solid gray;
-  letter-spacing: 2px;
   text-transform: uppercase;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
